xen: pvblock: Introduce xenguest_arm64_android board
* This board configuration will be used for Android
  domain under Xen.
* Enable GPT support, since Android needs it.
* Change boot delay to 3 sec
* Add support of the bootm command
* Introduce bcb based logic
* Use ab_select to chose and support A/B partitions
* Enable AVB 2.0

Reviewed-by: Volodymyr Babcuk <volodymyr_babchuk@epam.com>
Signed-off-by: Andrii Chepurnyi <andrii_chepurnyi@epam.com>

--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -1730,6 +1730,10 @@ config TARGET_XENGUEST_ARM64
 	bool "Xen guest ARM64"
 	select XENGUEST_ARM64_COMMON
 
+config TARGET_XENGUEST_ARM64_ANDROID
+	bool "Xen guest ARM64 for Android"
+	select XENGUEST_ARM64_COMMON
+
 endchoice
 
 config ARCH_SUPPORT_TFABOOT
@@ -1934,6 +1938,7 @@ source "board/xilinx/zynq/Kconfig"
 source "board/xilinx/zynqmp/Kconfig"
 source "board/phytium/durian/Kconfig"
 source "board/xen/xenguest_arm64/Kconfig"
+source "board/xen/xenguest_arm64_android/Kconfig"
 
 source "arch/arm/Kconfig.debug"
 
