--- a/drivers/tee/optee/Makefile
+++ b/drivers/tee/optee/Makefile
@@ -2,4 +2,7 @@
 
 obj-y += core.o
 obj-y += supplicant.o
-obj-$(CONFIG_SUPPORT_EMMC_RPMB) += rpmb.o
+obj-$(CONFIG_OPTEE_ENABLE_RPMB) += rpmb.o
+obj-$(CONFIG_OPTEE_RPMB_EMUL) += rpmb_emul.o
+obj-$(CONFIG_OPTEE_RPMB_EMUL) += sha2.o
+obj-$(CONFIG_OPTEE_RPMB_EMUL) += hmac_sha2.o
