android_defconfig: enable RPMB emulator
Signed-off-by: Volodymyr Babchuk <volodymyr_babchuk@epam.com>

--- a/configs/xenguest_arm64_android_defconfig
+++ b/configs/xenguest_arm64_android_defconfig
@@ -82,3 +82,9 @@ CONFIG_DM_MMC=y
 
 CONFIG_OF_BOARD=y
 CONFIG_OF_LIBFDT=y
+
+CONFIG_TEE=y
+CONFIG_OPTEE=y
+CONFIG_OPTEE_TA_AVB=y
+CONFIG_OPTEE_RPMB_EMUL=y
+CONFIG_OPTEE_ENABLE_RPMB=y
